--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
+    "jquery": "^3.5.1",
     "pump": "^3.0.0"
   }
 }
